@@ -299,13 +299,12 @@ table.money tr.rows td.col2:hover, table.money tr.rows td.col3:hover,
 table.money tr.rows td.col4:hover, table.money tr.rows td.col5:hover,
 table.money tr.rows td.col6:hover, table.money tr.rows td.col7:hover	{background-color:#E2E2E2; cursor:pointer;}
 
-table.money a				{display:block; padding:15px 10px; color:#A8C5E5;}
+table.money a				{display:block; color:#A8C5E5;}
 table.money a:focus			{color:#000; text-decoration:none;}
 table.money a:link  		{color:#000; text-decoration:none;}
 table.money a:visited		{color:#000; text-decoration:none;}
 table.money a:hover			{color:#000; text-decoration:none;}
 table.money a:active		{color:#000; text-decoration: none;}
-table.money td.col2 a		{padding:15px 10px 15px 15px;}
 
 
 /*	Table for Activities list (Donors / Sectors)
