@@ -301,14 +301,13 @@ table.money tr.rows td.col2:hover, table.money tr.rows td.col3:hover,
 table.money tr.rows td.col4:hover, table.money tr.rows td.col5:hover	{background-color:rgba(17, 46, 105, 1);}
 table.money tr.rows td.col6:hover, table.money tr.rows td.col7:hover	{background-color:rgba(17, 101, 105, 1);}
 
-table.money a				{display:block; padding:15px 10px; color:#A8C5E5;}
+table.money a				{display:block; color:#A8C5E5;}
 table.money a:focus			{color:#A8C5E5; text-decoration:none;}
 table.money a:link  		{color:#A8C5E5; text-decoration:none;}
 table.money a:visited		{color:#A8C5E5; text-decoration:none;}
 table.money td:hover,
 table.money a:hover			{color:#fff; text-decoration:none;}
 table.money a:active		{color:#A8C5E5; text-decoration: none;}
-table.money td.col2 a		{padding:15px 10px 15px 15px;}
 
 
 /*	Table for Activities list (Donors / Sectors)
