@@ -89,10 +89,16 @@
 #table_donors_row
 <tr class="rows">
 	<td class="col1" title="{table_donor_tip_data_text}">{crs}</td>
-	<td class="col2" title="{table_donor_tip_donor_text}" onclick="window.location.hash='#view=donor_activities&funder={funder}';" 	   class="block">{donor}</td>
-	<td class="col3" title="{table_donor_tip_t2012_text}" onclick="switch($(this).html()){ case '0': case '-' : $('html, body').animate({scrollTop: $('.description').offset().top}, 300); return false; } window.location.hash='#view=donor_transactions&year=2012&funder={funder}';" class="block">{t2012}</td>
-	<td class="col4" title="{table_donor_tip_t2013_text}" onclick="switch($(this).html()){ case '0': case '-' : $('html, body').animate({scrollTop: $('.description').offset().top}, 300); return false; } window.location.hash='#view=donor_transactions&year=2013&funder={funder}';" class="block">{t2013}</td>
-	<td class="col5" title="{table_donor_tip_t2014_text}" onclick="switch($(this).html()){ case '0': case '-' : $('html, body').animate({scrollTop: $('.description').offset().top}, 300); return false; } window.location.hash='#view=donor_transactions&year=2014&funder={funder}';" class="block">{t2014}</td>
-	<td class="col6" title="{table_donor_tip_b2014_text}" onclick="switch($(this).html()){ case '0': case '-' : $('html, body').animate({scrollTop: $('.description').offset().top}, 300); return false; } window.location.hash='#view=donor_budgets&year=2014&funder={funder}';" 	   class="block">{b2014}</td>
-	<td class="col7" title="{table_donor_tip_b2015_text}" onclick="switch($(this).html()){ case '0': case '-' : $('html, body').animate({scrollTop: $('.description').offset().top}, 300); return false; } window.location.hash='#view=donor_budgets&year=2015&funder={funder}';" 	   class="block">{b2015}</td>
+	<td class="col2" title="{table_donor_tip_donor_text}" onclick="window.location.hash='#view=donor_activities&funder={funder}';">
+		<a href="#view=donor_activities&funder={funder}">{donor}</a></td>
+	<td class="col3" title="{table_donor_tip_t2012_text}" onclick="switch($(this).html()){ case '0': case '-' : $('html, body').animate({scrollTop: $('.description').offset().top}, 300); return false; } window.location.hash='#view=donor_transactions&year=2012&funder={funder}';">
+		<a href="#view=donor_transactions&year=2012&funder={funder}">{t2012}</a></td>
+	<td class="col4" title="{table_donor_tip_t2013_text}" onclick="switch($(this).html()){ case '0': case '-' : $('html, body').animate({scrollTop: $('.description').offset().top}, 300); return false; } window.location.hash='#view=donor_transactions&year=2013&funder={funder}';">
+		<a href="#view=donor_transactions&year=2013&funder={funder}">{t2013}</a></td>
+	<td class="col5" title="{table_donor_tip_t2014_text}" onclick="switch($(this).html()){ case '0': case '-' : $('html, body').animate({scrollTop: $('.description').offset().top}, 300); return false; } window.location.hash='#view=donor_transactions&year=2014&funder={funder}';">
+		<a href="#view=donor_transactions&year=2014&funder={funder}">{t2014}</a></td>
+	<td class="col6" title="{table_donor_tip_b2014_text}" onclick="switch($(this).html()){ case '0': case '-' : $('html, body').animate({scrollTop: $('.description').offset().top}, 300); return false; } window.location.hash='#view=donor_budgets&year=2014&funder={funder}';">
+		<a href="#view=donor_budgets&year=2014&funder={funder}">{b2014}</a></td>
+	<td class="col7" title="{table_donor_tip_b2015_text}" onclick="switch($(this).html()){ case '0': case '-' : $('html, body').animate({scrollTop: $('.description').offset().top}, 300); return false; } window.location.hash='#view=donor_budgets&year=2015&funder={funder}';">
+		<a href="#view=donor_budgets&year=2015&funder={funder}">{b2015}</a></td>
 </tr>
