@@ -8,6 +8,7 @@ Fix High flava tables
 Fix hover state for cursors
 Fix stats table on main page
 Rows are now links on main page table
+Friendly links added to Donor / Sector tables
 
 
 Dashboard (2014-08-05 shi)
